[tool.poetry]
name = "yt-caption-search"
version = "0.1.0"
description = ""
authors = ["Mikita Chabatarovich <mikita.chabatarovich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
youtube_transcript_api = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
